--- a/JsTableTask/index.html
+++ b/JsTableTask/index.html
@@ -20,12 +20,11 @@
         <div class="w-70 mt-1">
             <table class="table-design mt-2">
                 <tr>
-                    <th id="no">№</th>
-                    <th id="name">Name</th>
-                    <th id="surname">Surname</th>
-                    <th id="age">Age</th>
-                    <th id="edit">Edit</th>
-                    <th id="delete">Delete</th>
+                    <th>№</th>
+                    <th>Name</th>
+                    <th>Surname</th>
+                    <th>Age</th>
+                    <th colspan="2">Actions</th>
                 </tr>
             </table>
             <button id="btn" class="btn">Add</button>
